--- a/ASFEnhance/Localization/Langs.resx
+++ b/ASFEnhance/Localization/Langs.resx
@@ -465,17 +465,17 @@
   <data name="PruchaseHistoryGroupGiftCredit" xml:space="preserve">
     <value>额度推算(仅供参考):</value>
   </data>
-  <data name="PruchaseHistoryStatusTotalPurchase" xml:space="preserve">
+  <data name="PruchaseHistoryStatusTotalExternalPurchase" xml:space="preserve">
     <value> - 外部消费总和: {0:0.00} {1}</value>
   </data>
   <data name="PruchaseHistoryStatusTotalGift" xml:space="preserve">
     <value> - 礼物赠送总和: {0:0.00} {1}</value>
   </data>
   <data name="PruchaseHistoryCreditMin" xml:space="preserve">
-    <value> - 外部消费 - 送礼: {0:0.00} {1}</value>
+    <value> - 额度*1.0 - 送礼: {0:0.00} {1}</value>
   </data>
   <data name="PruchaseHistoryCreditMax" xml:space="preserve">
-    <value> - 外部*1.8 - 送礼: {0:0.00} {1}</value>
+    <value> - 额度*1.8 - 送礼: {0:0.00} {1}</value>
   </data>
   <data name="PruchaseHistoryGroupAbout" xml:space="preserve">
     <value>数据说明:</value>
@@ -491,5 +491,17 @@
   </data>
   <data name="PruchaseHistoryAboutRateSource" xml:space="preserve">
     <value> - 在线汇率数据来自 ExchangeRate-API.com</value>
+  </data>
+  <data name="PluginInfo" xml:space="preserve">
+    <value>爱发电: https://afdian.net/@chr233</value>
+  </data>
+  <data name="PruchaseHistoryTypeWallet" xml:space="preserve">
+    <value>   - 余额: {0:0.00} {1}</value>
+  </data>
+  <data name="PruchaseHistoryTypeExternal" xml:space="preserve">
+    <value>   - 外部: {0:0.00} {1}</value>
+  </data>
+  <data name="PruchaseHistoryStatusTotalPurchase" xml:space="preserve">
+    <value> - 有效额度总和: {0:0.00} {1}</value>
   </data>
 </root>
