--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -504,4 +504,13 @@
   <data name="PruchaseHistoryStatusTotalPurchase" xml:space="preserve">
     <value> - Total gift credit: {0:0.00} {1}</value>
   </data>
+  <data name="PruchaseHistoryExternalMax" xml:space="preserve">
+    <value> - Total external spend * 1.8 - Gift purchase: {0:0.00} {1}</value>
+  </data>
+  <data name="PruchaseHistoryExternalMin" xml:space="preserve">
+    <value> - Total external spend * 1.0 - Gift purchase: {0:0.00} {1}</value>
+  </data>
+  <data name="CurrentLanguage" xml:space="preserve">
+    <value>en-US</value>
+  </data>
 </root>
