--- a/ASFEnhance/Localization/Static.resx
+++ b/ASFEnhance/Localization/Static.resx
@@ -125,4 +125,7 @@
 ██║  ██║███████║██║     ███████╗██║ ╚████║██║  ██║██║  ██║██║ ╚████║╚██████╗███████╗
 ╚═╝  ╚═╝╚══════╝╚═╝     ╚══════╝╚═╝  ╚═══╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝ ╚═════╝╚══════╝</value>
   </data>
+  <data name="Line" xml:space="preserve">
+    <value>==========================================</value>
+  </data>
 </root>
