--- a/ASFEnhance/Localization/Langs.resx
+++ b/ASFEnhance/Localization/Langs.resx
@@ -190,7 +190,7 @@
     <value>作者 Chr_, 联系方式 chr@chrxw.com</value>
   </data>
   <data name="PluginVer" xml:space="preserve">
-    <value>当前版本 {0}.{1}.{2}.{3}</value>
+    <value>当前插件版本 {0}</value>
   </data>
   <data name="ProfileBadges" xml:space="preserve">
     <value>徽章: {0}</value>
@@ -316,7 +316,7 @@
     <value>由 {0} 发送</value>
   </data>
   <data name="GiftMessage" xml:space="preserve">
-    <value>{0} 版本 {1}.{2}.{3}.{4}</value>
+    <value>{0} 版本 {1}</value>
   </data>
   <data name="GiftSignature" xml:space="preserve">
     <value>由 {0} 发送</value>
@@ -346,7 +346,7 @@
     <value>获取App信息失败, 可能AppID错误, 或者锁区</value>
   </data>
   <data name="AppDetailResult" xml:space="preserve">
-    <value>{0} : {1}</value>
+    <value> - {0} : {1}</value>
   </data>
   <data name="AppTypeGame" xml:space="preserve">
     <value>游戏 / 软件</value>
@@ -358,40 +358,40 @@
     <value>DLC</value>
   </data>
   <data name="AppType" xml:space="preserve">
-    <value>类型: {0}</value>
+    <value> - 类型: {0}</value>
   </data>
   <data name="AppFullGame" xml:space="preserve">
-    <value>游戏本体: {0} {1}</value>
+    <value> - 游戏本体: {0} {1}</value>
   </data>
   <data name="AppDevelopers" xml:space="preserve">
-    <value>开发商: {0}</value>
+    <value> - 开发商: {0}</value>
   </data>
   <data name="AppPublishers" xml:space="preserve">
-    <value>发型商: {0}</value>
+    <value> - 发型商: {0}</value>
   </data>
   <data name="AppCategories" xml:space="preserve">
-    <value>标签: {0}</value>
+    <value>- 标签: {0}</value>
   </data>
   <data name="AppGenres" xml:space="preserve">
-    <value>分类: {0}</value>
+    <value> - 分类: {0}</value>
   </data>
   <data name="AppShortDescription" xml:space="preserve">
-    <value>简介: {0}</value>
+    <value> - 简介: {0}</value>
   </data>
   <data name="AppSupportedPlatforms" xml:space="preserve">
-    <value>支持平台: Win{0} Mac{1} Linux{2}</value>
+    <value> - 支持平台: Win{0} Mac{1} Linux{2}</value>
   </data>
   <data name="AppSteamRecommended" xml:space="preserve">
-    <value>Steam 评价数量: {0}</value>
+    <value> - Steam 评价数量: {0}</value>
   </data>
   <data name="AppMetacriticScore" xml:space="preserve">
-    <value>Metacritic 评分: {0}</value>
+    <value> - Metacritic 评分: {0}</value>
   </data>
   <data name="AppReleasedDate" xml:space="preserve">
-    <value>发售日期: {0}</value>
+    <value> - 发售日期: {0}</value>
   </data>
   <data name="AppReleasedDateEx" xml:space="preserve">
-    <value> [{0}]</value>
+    <value> -  [{0}]</value>
   </data>
   <data name="AppDelisted" xml:space="preserve">
     <value>不可购买</value>
@@ -400,16 +400,16 @@
     <value>未发售</value>
   </data>
   <data name="AppDiscount" xml:space="preserve">
-    <value>折扣: -{0}% {1}</value>
+    <value> - 折扣: -{0}% {1}</value>
   </data>
   <data name="AppNoDiscount" xml:space="preserve">
-    <value>折扣: 未打折</value>
+    <value> - 折扣: 未打折</value>
   </data>
   <data name="AppSubInfo" xml:space="preserve">
-    <value>Sub/{0} {1}</value>
+    <value> - Sub/{0} {1}</value>
   </data>
   <data name="AppDlcInfo" xml:space="preserve">
-    <value>DLC: {0}</value>
+    <value> - DLC: {0}</value>
   </data>
   <data name="SearchResultEmpty" xml:space="preserve">
     <value>该查询未传回任何结果</value>
@@ -512,5 +512,65 @@
   </data>
   <data name="CurrentLanguage" xml:space="preserve">
     <value>zh-Hans</value>
+  </data>
+  <data name="AppDetailName" xml:space="preserve">
+    <value> - 名称: {0}</value>
+  </data>
+  <data name="GetReleaseInfoFailed" xml:space="preserve">
+    <value>读取插件发行版信息失败!</value>
+  </data>
+  <data name="CommandHelp" xml:space="preserve">
+    <value>命令帮助:</value>
+  </data>
+  <data name="NoArgs" xml:space="preserve">
+    <value>无参数</value>
+  </data>
+  <data name="HelpArgsExplain" xml:space="preserve">
+    <value>[ ]: 可选参数, &lt; &gt;: 数组(使用,分隔)</value>
+  </data>
+  <data name="ASFECurrentVersion" xml:space="preserve">
+    <value>当前版本: </value>
+  </data>
+  <data name="ASFEAsfVersion" xml:space="preserve">
+    <value> - ASF版本: {0}</value>
+  </data>
+  <data name="ASFEPluginVersion" xml:space="preserve">
+    <value> - 插件版本: {0}</value>
+  </data>
+  <data name="ASFEOnlineVersion" xml:space="preserve">
+    <value>在线版本: </value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value> - 版本: {0}</value>
+  </data>
+  <data name="Detail" xml:space="preserve">
+    <value> - 描述: {0}</value>
+  </data>
+  <data name="Assert" xml:space="preserve">
+    <value> - 附件: </value>
+  </data>
+  <data name="SubName" xml:space="preserve">
+    <value>   - 名称: {0}</value>
+  </data>
+  <data name="SubSize" xml:space="preserve">
+    <value>   - 尺寸: {0:0.000} KB</value>
+  </data>
+  <data name="SubLink" xml:space="preserve">
+    <value>   - 链接: {0}</value>
+  </data>
+  <data name="UpdateTips" xml:space="preserve">
+    <value>可以使用命令 ASFEUPDATE 自动更新插件</value>
+  </data>
+  <data name="AlreadyLatest" xml:space="preserve">
+    <value>当前已经是最新版本, 无需更新插件</value>
+  </data>
+  <data name="DownloadFailed" xml:space="preserve">
+    <value>下载插件失败!</value>
+  </data>
+  <data name="UpdateSuccess" xml:space="preserve">
+    <value>插件更新完成, 重启ASF即可应用, 如果不兼容请更新ASF版本</value>
+  </data>
+  <data name="UpdateFiledWithZip" xml:space="preserve">
+    <value>插件更新失败, 压缩包内容解析失败</value>
   </data>
 </root>
