--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -550,7 +550,7 @@
     <value>无参数</value>
   </data>
   <data name="PluginUpdateReady" xml:space="preserve">
-    <value>**插件更新准备完毕,重启ASF即可应用更新.**\n{0}</value>
+    <value>**插件更新准备完毕,重启ASF即可应用更新.**</value>
   </data>
   <data name="SubLink" xml:space="preserve">
     <value>   - 链接: {0}</value>
@@ -572,5 +572,8 @@
   </data>
   <data name="UpdateTips" xml:space="preserve">
     <value>可以使用命令 ASFEUPDATE / AU 自动更新插件</value>
+  </data>
+  <data name="AlreadyLatest" xml:space="preserve">
+    <value>当前已经是最新版本, 无需更新插件</value>
   </data>
 </root>
