--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -460,7 +460,7 @@
     <value> - Store purchase: {0:0.00} {1}</value>
   </data>
   <data name="PruchaseHistoryTypeRefunded" xml:space="preserve">
-    <value> - Refunded purchase:  {0:0.00} {1}</value>
+    <value> - Refunded purchase: {0:0.00} {1}</value>
   </data>
   <data name="PruchaseHistoryStatusTotalExternalPurchase" xml:space="preserve">
     <value> - Total external spend: {0:0.00} {1}</value>
@@ -584,5 +584,8 @@
   </data>
   <data name="CommandHelpCmdNotFound" xml:space="preserve">
     <value>找不到相关命令的帮助</value>
+  </data>
+  <data name="PruchaseHistoryTypeWalletPurchase" xml:space="preserve">
+    <value> - 余额充值: {0:0.00} {1}</value>
   </data>
 </root>
