--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -594,4 +594,16 @@
   <data name="EventTaskComplete" xml:space="preserve">
     <value>节日活动已完成</value>
   </data>
+  <data name="CleanUpOldBackup" xml:space="preserve">
+    <value>旧的插件备份已经自动清理</value>
+  </data>
+  <data name="CleanUpOldBackupFailed" xml:space="preserve">
+    <value>旧的插件备份清理失败</value>
+  </data>
+  <data name="ASFEUpdateTips" xml:space="preserve">
+    <value>使用命令 ASFEUPDATE / AU 自动更新插件</value>
+  </data>
+  <data name="ASFEVersionTips" xml:space="preserve">
+    <value>使用命令 ASFEVERSION / AV 检查插件更新</value>
+  </data>
 </root>
