--- a/ASFEnhance/Localization/Langs.resx
+++ b/ASFEnhance/Localization/Langs.resx
@@ -573,9 +573,6 @@
   <data name="UpdateFiledWithZip" xml:space="preserve">
     <value>插件更新失败, 压缩包内容解析失败</value>
   </data>
-  <data name="PluginUpdateReady" xml:space="preserve">
-    <value>**插件更新准备完毕,重启ASF即可应用更新.**</value>
-  </data>
   <data name="CommandHelpNoShortName" xml:space="preserve">
     <value>- {0} {1} : {2}</value>
   </data>
@@ -605,5 +602,8 @@
   </data>
   <data name="ASFEUpdateTips" xml:space="preserve">
     <value>使用命令 ASFEUPDATE / AU 自动更新插件</value>
+  </data>
+  <data name="DeleteReview" xml:space="preserve">
+    <value>删除 {0} 的评测: </value>
   </data>
 </root>
