--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -130,7 +130,7 @@
     <value>Response is empty</value>
   </data>
   <data name="CartInvalidType" xml:space="preserve">
-    <value>- {0}: Invalid type [SUB|BUNDLE]</value>
+    <value>{0}: Invalid type [SUB|BUNDLE]</value>
   </data>
   <data name="CartIsEmpty" xml:space="preserve">
     <value>Shopping cart is emoty</value>
@@ -138,7 +138,7 @@
   <data name="CartItemInfo" xml:space="preserve">
     <value>- {0} {1} {2:F2}</value>
   </data>
-  <data name="CartNetworkError" xml:space="preserve">
+  <data name="NetworkError" xml:space="preserve">
     <value>Network Error</value>
   </data>
   <data name="CartPurchaseGift" xml:space="preserve">
