--- a/ASFEnhance/Localization/Langs.resx
+++ b/ASFEnhance/Localization/Langs.resx
@@ -346,7 +346,7 @@
     <value>获取App信息失败, 可能AppID错误, 或者锁区</value>
   </data>
   <data name="AppDetailResult" xml:space="preserve">
-    <value> - {0} : {1}</value>
+    <value>{0} : {1}</value>
   </data>
   <data name="AppTypeGame" xml:space="preserve">
     <value>游戏 / 软件</value>
