--- a/ASFEnhance/Localization/Langs.resx
+++ b/ASFEnhance/Localization/Langs.resx
@@ -606,4 +606,46 @@
   <data name="DeleteReview" xml:space="preserve">
     <value>删除 {0} 的评测: </value>
   </data>
+  <data name="AccountFreeSubTitle" xml:space="preserve">
+    <value>SubID | 名称 (仅显示免费Sub)</value>
+  </data>
+  <data name="AccountSubTitle" xml:space="preserve">
+    <value>类型 | 名称</value>
+  </data>
+  <data name="AccountSubItem" xml:space="preserve">
+    <value>{0} | {1}</value>
+  </data>
+  <data name="AccountSubRetail" xml:space="preserve">
+    <value>零售</value>
+  </data>
+  <data name="AccountSubFree" xml:space="preserve">
+    <value>免费赠送</value>
+  </data>
+  <data name="AccountSubStore" xml:space="preserve">
+    <value>Steam 商店</value>
+  </data>
+  <data name="AccountSubGift" xml:space="preserve">
+    <value>礼物/玩家通行证</value>
+  </data>
+  <data name="AccountSubUnknown" xml:space="preserve">
+    <value>???</value>
+  </data>
+  <data name="ArgsIsEmpty" xml:space="preserve">
+    <value>参数为空</value>
+  </data>
+  <data name="AccountSubInvalidArg" xml:space="preserve">
+    <value>无效的参数</value>
+  </data>
+  <data name="AccountSubRemovedItem" xml:space="preserve">
+    <value>移除 {0} {1}</value>
+  </data>
+  <data name="AccountSubNotOwn" xml:space="preserve">
+    <value>尚未拥有该Sub</value>
+  </data>
+  <data name="AccountSubDemoSubNotFount" xml:space="preserve">
+    <value>未找到账户中的免费 Demo Sub</value>
+  </data>
+  <data name="AccountSubRemovedDemos" xml:space="preserve">
+    <value>移除了 {0} 个 Demo</value>
+  </data>
 </root>
